# riscv-psuedo-atomics

./: COPYRIGHT  Cargo.toml  README.md  rust-toolchain.toml
src/: atomic.rs  lib.rs
